@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.8
-Entered-date:	2009-01-09
+Version:	9.9
+Entered-date:	2009-01-25
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.9 Recalculate cyls when kernel returns a truncated value
 		v9.8 FIX -N for non-LBA48 drives
 		v9.7 FIX LBA28/48 BUGS, favour ATA_12 over ATA_16 when possible (helps with USB)
 		v9.6 fix -N for 1.5TB drives
@@ -82,7 +83,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		96K hdparm-9.8.tar.gz
+		96K hdparm-9.9.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
