@@ -9,11 +9,13 @@ enum {
 	ATA_OP_READ_LONG_ONCE		= 0x23,
 	ATA_OP_READ_PIO_EXT		= 0x24,
 	ATA_OP_READ_DMA_EXT		= 0x25,
+	ATA_OP_READ_FPDMA		= 0x60,	// NCQ
 	ATA_OP_WRITE_PIO		= 0x30,
 	ATA_OP_WRITE_LONG		= 0x32,
 	ATA_OP_WRITE_LONG_ONCE		= 0x33,
 	ATA_OP_WRITE_PIO_EXT		= 0x34,
 	ATA_OP_WRITE_DMA_EXT		= 0x35,
+	ATA_OP_WRITE_FPDMA		= 0x61,	// NCQ
 	ATA_OP_READ_VERIFY		= 0x40,
 	ATA_OP_READ_VERIFY_ONCE		= 0x41,
 	ATA_OP_READ_VERIFY_EXT		= 0x42,
